# Raspberry-Pi-with-Visual-Studio-Code-Remote-SSH-and-C-or-C-Development

./: README.md  RPISETUPTIPS.md
samples/sample-c-app/: CMakeLists.txt  main.c
samples/sample-c-app-extended/: CMakeLists.txt  isoTime.c  isoTime.h  main.c
scripts/: ssh-setup.sh  windows-ssh-setup.cmd
